# Microvisor-Demo-CMSIS-Freertos

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  STM32U585xx_FLASH_mv.ld  deploy.sh  docker-entrypoint.sh  env.list  rename.sh  toolchain.cmake
.github/workflows/: build.yml
Config/: FreeRTOSConfig.h  stm32u5xx_hal_conf.h
Demo/: CMakeLists.txt  app_version.in
Demo/Inc/: ht16k33.h  http.h  i2c.h  logging.h  main.h  mcp9808.h  secrets.h  tim.h
Demo/Src/: gpio.c  ht16k33.c  http.c  i2c.c  logging.c  main.c  mcp9808.c  spi.c  stm32u5xx_hal_timebase_tim_template.c  sys.c  tim.c
ST7789-lcd/: Debug.h
ST7789-lcd/GUI_DEV/: DEV_Config.c  DEV_Config.h  GUI_Paint.c  GUI_Paint.h
ST7789-lcd/LCD/: LCD_Driver.c  LCD_Driver.h
ST7789-lcd/image/: image.c  image.h
ST_Code/Core/Inc/: stm32u5xx_it.h
ST_Code/Core/Src/: stm32u5xx_hal_msp.c  syscalls.c  sysmem.c
ST_Code/Drivers/CMSIS/Device/ST/STM32U5xx/: Release_Notes.html
ST_Code/Drivers/CMSIS/Device/ST/STM32U5xx/Include/: partition_stm32u5xx.h  stm32u575xx.h  stm32u585xx.h  stm32u5xx.h  system_stm32u5xx.h
ST_Code/Drivers/CMSIS/Device/ST/STM32U5xx/Include/Templates/: partition_stm32u575xx.h  partition_stm32u585xx.h
ST_Code/Drivers/CMSIS/Device/ST/STM32U5xx/Source/Templates/: system_stm32u5xx.c  system_stm32u5xx_ns.c  system_stm32u5xx_s.c
ST_Code/Drivers/CMSIS/Device/ST/STM32U5xx/Source/Templates/arm/: startup_stm32u575xx.s  startup_stm32u585xx.s
ST_Code/Drivers/CMSIS/Device/ST/STM32U5xx/Source/Templates/gcc/: startup_stm32u575xx.s  startup_stm32u585xx.s
ST_Code/Drivers/CMSIS/Device/ST/STM32U5xx/Source/Templates/gcc/linker/: STM32U575xx_FLASH.ld  STM32U575xx_FLASH_ns.ld  STM32U575xx_FLASH_s.ld  STM32U575xx_RAM.ld  STM32U575xx_RAM_ns.ld  STM32U575xx_RAM_s.ld  STM32U585xx_FLASH.ld  STM32U585xx_FLASH_ns.ld  STM32U585xx_FLASH_s.ld  STM32U585xx_RAM.ld  STM32U585xx_RAM_ns.ld  STM32U585xx_RAM_s.ld
ST_Code/Drivers/CMSIS/Device/ST/STM32U5xx/Source/Templates/iar/: startup_stm32u575xx.s  startup_stm32u585xx.s
ST_Code/Drivers/STM32U5xx_HAL_Driver/: README.md  Release_Notes.html
ST_Code/Drivers/STM32U5xx_HAL_Driver/Inc/: stm32_assert_template.h  stm32u5xx_hal.h  stm32u5xx_hal_adc.h  stm32u5xx_hal_adc_ex.h  stm32u5xx_hal_comp.h  stm32u5xx_hal_conf_template.h  stm32u5xx_hal_cordic.h  stm32u5xx_hal_cortex.h  stm32u5xx_hal_crc.h  stm32u5xx_hal_crc_ex.h  stm32u5xx_hal_cryp.h  stm32u5xx_hal_cryp_ex.h  stm32u5xx_hal_dac.h  stm32u5xx_hal_dac_ex.h  stm32u5xx_hal_dcache.h  stm32u5xx_hal_dcmi.h  stm32u5xx_hal_def.h  stm32u5xx_hal_dma.h  stm32u5xx_hal_dma2d.h  stm32u5xx_hal_dma_ex.h  stm32u5xx_hal_exti.h  stm32u5xx_hal_fdcan.h  stm32u5xx_hal_flash.h  stm32u5xx_hal_flash_ex.h  stm32u5xx_hal_fmac.h  stm32u5xx_hal_gpio.h  stm32u5xx_hal_gpio_ex.h  stm32u5xx_hal_gtzc.h  stm32u5xx_hal_hash.h  stm32u5xx_hal_hash_ex.h  stm32u5xx_hal_hcd.h  stm32u5xx_hal_i2c.h  stm32u5xx_hal_i2c_ex.h  stm32u5xx_hal_icache.h  stm32u5xx_hal_irda.h  stm32u5xx_hal_irda_ex.h  stm32u5xx_hal_iwdg.h  stm32u5xx_hal_lptim.h  stm32u5xx_hal_lptim_ex.h  stm32u5xx_hal_mdf.h  (+75 more)
ST_Code/Drivers/STM32U5xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
ST_Code/Drivers/STM32U5xx_HAL_Driver/Src/: stm32u5xx_hal.c  stm32u5xx_hal_adc.c  stm32u5xx_hal_adc_ex.c  stm32u5xx_hal_comp.c  stm32u5xx_hal_cordic.c  stm32u5xx_hal_cortex.c  stm32u5xx_hal_crc.c  stm32u5xx_hal_crc_ex.c  stm32u5xx_hal_cryp.c  stm32u5xx_hal_cryp_ex.c  stm32u5xx_hal_dac.c  stm32u5xx_hal_dac_ex.c  stm32u5xx_hal_dcache.c  stm32u5xx_hal_dcmi.c  stm32u5xx_hal_dma.c  stm32u5xx_hal_dma2d.c  stm32u5xx_hal_dma_ex.c  stm32u5xx_hal_exti.c  stm32u5xx_hal_fdcan.c  stm32u5xx_hal_flash.c  stm32u5xx_hal_flash_ex.c  stm32u5xx_hal_fmac.c  stm32u5xx_hal_gpio.c  stm32u5xx_hal_gtzc.c  stm32u5xx_hal_hash.c  stm32u5xx_hal_hash_ex.c  stm32u5xx_hal_hcd.c  stm32u5xx_hal_i2c.c  stm32u5xx_hal_i2c_ex.c  stm32u5xx_hal_icache.c  stm32u5xx_hal_irda.c  stm32u5xx_hal_iwdg.c  stm32u5xx_hal_lptim.c  stm32u5xx_hal_mdf.c  stm32u5xx_hal_mmc.c  stm32u5xx_hal_mmc_ex.c  stm32u5xx_hal_msp_template.c  stm32u5xx_hal_nand.c  stm32u5xx_hal_nor.c  stm32u5xx_hal_opamp.c  (+68 more)
uapi/: .gitignore  README.md  mv_api.h
